--- a/backend/package.json
+++ b/backend/package.json
@@ -18,15 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
-    "babel-loader": "^8.0.6",
-    "husky": "^3.0.8",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+    "babel-loader": "^8.0.6"
   },
   "engines": {
     "node": ">=10.0.0",
