--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "develop:yarn": "npm-run-all -p develop:yarn:*",
     "develop:yarn:backend": "cd backend && yarn develop",
     "develop:yarn:frontend": "cd frontend && yarn develop",
-    "build:npm": "cd backend && npm run build",
-    "build:yarn": "cd backend && yarn build"
+    "build:npm": "cd frontend && npm run build",
+    "build:yarn": "cd frontend && yarn build"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
