--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "develop:yarn:backend": "cd backend && yarn develop",
     "develop:yarn:frontend": "cd frontend && yarn develop",
     "build:npm": "cd frontend && npm run build",
-    "build:yarn": "cd frontend && yarn build"
+    "build:yarn": "cd frontend && yarn install && yarn build"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
