--- a/backend/data/projects.json
+++ b/backend/data/projects.json
@@ -1,22 +1,11 @@
 {
   "projects": [
     {
-      "id": "8c83fb093a79424fb4d2f24da9bc0bb1",
-      "name": "stendi",
-      "published": "2020-01",
-      "title": "Build website for Norway's largest private healthcare services",
-      "descriptions": "",
-      "technologies": ["react", "typescript", "mogodb", "storybook"],
-      "website": "https://stendi.no/",
-      "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331052/mysite/gvycbh0le6qladriqmpk.jpg",
-      "isOpenSource": false
-    },
-    {
       "id": "ecd917cf128b48408369541784e28b31",
       "name": "ludens",
       "published": "2020-04",
       "title": "Developed this content rich website in two weeks",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["react", "typescript", "mogodb", "storybook"],
       "website": "https://www.ludensreklame.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586430095/mysite/mtgdj2b494j1oyonbzqz.jpg",
@@ -27,7 +16,7 @@
       "name": "asker kulturhus",
       "published": "2019-05",
       "title": "My very first react project at work: Asker kulturhus' website",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["react", "typescript", "sanity"],
       "website": "https://askerkulturhus.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331201/mysite/bo2ytz6xsco4awdxkibu.jpg",
@@ -38,7 +27,7 @@
       "name": "tensorflow-detection",
       "published": "2019-07",
       "title": "Real time movement detection app built with JS machine learning framework.",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["typescript", "tensorflow js", "npm"],
       "website": "https://look-at-me.netlify.com/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586330977/mysite/svpmnxwcwgtdbz2wga1f.jpg",
@@ -49,18 +38,29 @@
       "name": "giphy search",
       "published": "2019-10",
       "title": "Gif search app made with React and TypeScript",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["typescript", "tensorflow js"],
       "website": "https://nancybolstad.github.io/giphy-app/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331189/mysite/izlujktnarjapwodehjb.jpg",
       "isOpenSource": true
     },
     {
+      "id": "8c83fb093a79424fb4d2f24da9bc0bb1",
+      "name": "stendi",
+      "published": "2020-01",
+      "title": "Build website for Norway's largest private healthcare services",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
+      "technologies": ["react", "typescript", "mogodb", "storybook"],
+      "website": "https://stendi.no/",
+      "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331052/mysite/gvycbh0le6qladriqmpk.jpg",
+      "isOpenSource": false
+    },
+    {
       "id": "b0a7f1b9b45840458b1944a6304d85b6",
       "name": "search for RAWG Video Games",
       "published": "2020-03",
       "title": "Gif search app made with React and TypeScript",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["typescript", "react"],
       "website": "https://agitated-kilby-44b818.netlify.com/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331151/mysite/yim4muf9qt9zhwghxlc8.jpg",
@@ -71,7 +71,7 @@
       "name": "gravstein24",
       "published": "2019-09",
       "title": "Selling gravestones online: from scratch to final products",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["react", "typescript", "mogodb", "storybook"],
       "website": "https://www.gravstein24.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331083/mysite/rkoeqlndzf6yxzgmpzr0.jpg",
@@ -82,7 +82,7 @@
       "name": "elkoenery",
       "published": "2019-11",
       "title": "Developed the front-end for a norwegian electrical E-commerce platform",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["react", "typescript", "mogodb", "storybook"],
       "website": "https://elkoenergy.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331115/mysite/xnlhnqzlej8d0snrd7ad.jpg",
@@ -93,7 +93,7 @@
       "name": "Alt Installasjon AS",
       "published": "2020-02",
       "title": "Online store for electrical installations and electrical equipment",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["react", "typescript", "mogodb", "storybook"],
       "website": "https://www.altinstallasjon.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331065/mysite/xt8munzm56nasprajcxz.jpg",
@@ -104,7 +104,7 @@
       "name": "board game",
       "published": "2019-12",
       "title": "Online board game made with TypeScript, Sass and native HTML",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["typescript", "sass", "game"],
       "website": "https://cartoon-game-of-thrones.netlify.com/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331179/mysite/s3zc3tzfbll42tis5rlw.jpg",
@@ -116,7 +116,7 @@
       "name": "nasa-apollo",
       "published": "2019-06",
       "title": "nasa-apollo",
-      "descriptions": "",
+      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["javascript", "html", "css"],
       "website": "https://nancybolstad.github.io/nasa-apollo/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331136/mysite/wvslnkz2lotvcua1h4vu.jpg",
