Fixed production api url

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VUE_APP_API_URL=https://secret-taiga-29398.herokuapp.com/api/v1/projects
+VUE_APP_API_URL=https://secret-taiga-29398.herokuapp.com/api/v1/projects/
