Fixed some backend data

--- a/backend/data/projects.json
+++ b/backend/data/projects.json
@@ -8,8 +8,16 @@
       "subtitle": "",
       "leadText": "Developed this content rich website in two weeks",
       "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
-      "technologies": ["react", "typescript", "node", "mongoDB", "storybook"],
-      "categories": ["ludens"],
+      "technologies": [
+        "react",
+        "typescript",
+        "node",
+        "mongoDB",
+        "styled-components",
+        "CircleCI",
+        "heroku"
+      ],
+      "categories": ["work", "front-end"],
       "website": "https://www.ludensreklame.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586430095/mysite/mtgdj2b494j1oyonbzqz.jpg",
       "isOpenSource": false
@@ -20,8 +28,8 @@
       "published": "2019-05",
       "title": "My very first react project at work: Asker kulturhus' website",
       "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
-      "technologies": ["react", "typescript", "sanity"],
-      "categories": ["ludens"],
+      "technologies": ["react", "typescript", "sanity", "styled-components"],
+      "categories": ["work project", "front-end development", "headless cms"],
       "website": "https://askerkulturhus.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331201/mysite/bo2ytz6xsco4awdxkibu.jpg",
       "galley": [
@@ -39,8 +47,8 @@
       "published": "2019-07",
       "title": "Real time movement detection app built with JS machine learning framework.",
       "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
-      "technologies": ["typescript", "tensorflow", "npm"],
-      "categories": ["personal"],
+      "technologies": ["typescript", "react", "tensorflow", "npm"],
+      "categories": ["pet project", "machine learning", "front-end"],
       "website": "https://look-at-me.netlify.com/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586330977/mysite/svpmnxwcwgtdbz2wga1f.jpg",
       "isOpenSource": true
@@ -51,8 +59,8 @@
       "published": "2019-10",
       "title": "A simple gif search React app made with GIPHY API.",
       "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
-      "technologies": ["typescript", "tensorflow js"],
-      "categories": ["personal"],
+      "technologies": ["typescript", "react"],
+      "categories": ["pet project", "Fetch API", "asynchronous web applications"],
       "website": "https://nancybolstad.github.io/giphy-app/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331189/mysite/izlujktnarjapwodehjb.jpg",
       "isOpenSource": true
@@ -64,7 +72,7 @@
       "title": "Build website for Norway's largest private healthcare services",
       "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
       "technologies": ["react", "typescript", "mogodb", "storybook"],
-      "categories": ["ludens"],
+      "categories": ["work"],
       "website": "https://stendi.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331052/mysite/gvycbh0le6qladriqmpk.jpg",
       "isOpenSource": false
@@ -87,7 +95,7 @@
       "published": "2019-09",
       "title": "Selling gravestones online: from scratch to final products",
       "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
-      "technologies": ["react", "typescript", "mogodb", "storybook"],
+      "technologies": ["react", "typescript", "storybook"],
       "categories": ["e-commerce", "ludens"],
       "website": "https://www.gravstein24.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331083/mysite/rkoeqlndzf6yxzgmpzr0.jpg",
