--- a/backend/data/projects.json
+++ b/backend/data/projects.json
@@ -4,13 +4,12 @@
       "id": "ecd917cf128b48408369541784e28b31",
       "name": "ludens",
       "published": "2020-04",
-      "title": "Developed this content rich website in two weeks",
-      "subtitle": "",
-      "leadText": "Developed this content rich website in two weeks",
-      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
+      "title": "Develop the website for Ludens within two weeks",
+      "descriptions": "<p>This project is to build a new website for a Norwegian design and technology company located in Oslo. The end-goal is to get the new website to sell the company's digital services and softwares. It's equally important to make sure that the website is tied directly to what the prospective customer is expecting to see and experience when they arrive on the page.</p><p>Together with another developer at Ludens, we developed this website from scratch to end product within only two weeks.The final product has a plethora of features, functionality, and configurations, including Search Optimization,integration with a scalable, cross-platform content management system and easy forms.</p><strong>My contribution in this project includes: developing the header, footer and article components, creating on-site search functionalities, and building the contact forms. I am also responsible for creating automated build, test, and deploy workflows using CircleCI.</strong>",
       "technologies": [
         "react",
         "typescript",
+        "next",
         "node",
         "mongoDB",
         "styled-components",
@@ -27,7 +26,7 @@
       "name": "asker kulturhus",
       "published": "2019-05",
       "title": "My very first react project at work: Asker kulturhus' website",
-      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
+      "descriptions": "<p>I got my first developer job after 6 months of learning web development at Noroff. Ludens is a Norwegian design and technology companiny, building its client’s websites mostly using React, TypeScript, Node, Next and MongoDB. They also handles SEO, graphic designs and marketing among other things.</p><p>Asker kulturhus's website is my first web development project in the company. I got a crash course in developing website with React, TypeScript, Node and MongoDB, and started putting these to work immediately.</p><p>Needless to say, I was excited to be in the industry, regardless of what I would be doing. It just so happens that I have been dying to learn fullstack web development anyway, so landing this job was perfect for me on many levels.</p>",
       "technologies": ["react", "typescript", "sanity", "styled-components"],
       "categories": ["work project"],
       "website": "https://askerkulturhus.no/",
@@ -45,8 +44,8 @@
       "id": "2ea19538f04340e1a9b0a6024e4852bd",
       "name": "tensorflow-detection",
       "published": "2019-07",
-      "title": "Real time movement detection app built with JS machine learning framework.",
-      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
+      "title": "Real time movement detection app built with TensorFlow.js",
+      "descriptions": "<p>As a web developer, I am thirst for learning new things. This eye movement tracking app is built with TensorFlow.js, a JavaScript framework which allows us to build Machine Learning models (especially Deep Neural Networks) that we can easily integrate with web apps. On this project, I learnt how to create multi-dimensional data containers and perdict pounds from kilograms using a simple data visualization model. I also got a deep understanding of how TypeScript and React hooks works.</p>",
       "technologies": ["typescript", "react", "tensorflow", "npm"],
       "categories": ["pet project", "machine learning"],
       "website": "https://look-at-me.netlify.com/",
@@ -58,20 +57,21 @@
       "name": "giphy search",
       "published": "2019-10",
       "title": "A simple gif search React app made with GIPHY API.",
-      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
+      "descriptions": "<p>This is a pet project I created during my spare time for practicing async programming, promises, and try/catch in JavaScript as well as creating my own React custom hooks for fetching data from an third party API</p><h3>Technology Stack</h3><ul><li>TypeScript</li><li>React</li><li>Styled components</li><li>Storybook</li></ul><h3>Features</h3><ul><li>Async fetching</li><li>Display search results in a Masonry-like grid layout/photo gallery</li><li>Support infinite loading: keep loading more images when user clicks the &quot;Load more&quot; button</li><li>Show trending gifs in the index page</li><li>Responsive design. Mobile-first.</li><li>Meet the Web accessibility requirements.</li></ul>",
       "technologies": ["typescript", "react"],
       "categories": ["pet project", "search app"],
       "website": "https://nancybolstad.github.io/giphy-app/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331189/mysite/izlujktnarjapwodehjb.jpg",
-      "isOpenSource": true
+      "isOpenSource": true,
+      "gitLink": "https://github.com/NancyBolstad/giphy-app"
     },
     {
       "id": "8c83fb093a79424fb4d2f24da9bc0bb1",
       "name": "stendi",
       "published": "2020-01",
       "title": "Build website for Norway's largest private healthcare services",
-      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
-      "technologies": ["react", "typescript", "mogodb", "storybook"],
+      "descriptions": "<p>Together with the development team at Ludens, we developed this website for Stendi, Norway's largest private healthcare services. The development process involves both the frontend and backend. In the frontend part, I created the theme/mode change toggle, page layout, slider, CTA page banners, responsive cards list and the employee list. In the backend part, I created schemas in the database using Node, Next and MongoDB, as well as functionalities that supports generating PDF document using NodeJs.</p>",
+      "technologies": ["react", "typescript", "Node", "Next", "mongoDB"],
       "categories": ["work project", "e-commerce"],
       "website": "https://stendi.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331052/mysite/gvycbh0le6qladriqmpk.jpg",
@@ -81,21 +81,22 @@
       "id": "b0a7f1b9b45840458b1944a6304d85b6",
       "name": "search for RAWG Video Games",
       "published": "2020-03",
-      "title": "Gif search app made with React and TypeScript",
-      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
+      "title": "Hooks for Advanced React Component Patterns",
+      "descriptions": "<p>I created this video game search app with React and TypeScript for the JavaScript Frameworks course at Noroff.</p><h3>Technology Stack</h3><ul><li>TypeScript</li><li>React</li><li>React router dom</li><li>Styled components</li><li>Storybook</li></ul><h3>Features</h3><ul><li>Creating a custom hook for fetching Data</li><li>Managing global state with React&#39;s Hooks and Context API</li><li>Lazy Loading React Components (with react.lazy and suspense)</li><li>Taking advantage of local storage to creating persist state on page refresh</li><li>Enabling dark mode with Styled-Components</li><li>Testing with Jest</li><li>Creating reusable array sort functions</li><li>Creating reusable component</li></ul>",
       "technologies": ["typescript", "react"],
       "categories": ["school project", "search app"],
       "website": "https://agitated-kilby-44b818.netlify.com/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331151/mysite/yim4muf9qt9zhwghxlc8.jpg",
-      "isOpenSource": true
+      "isOpenSource": true,
+      "gitLink": "https://github.com/NancyBolstad/noroff-react-ca"
     },
     {
       "id": "ff1ded744630499fabd1d8904467041e",
       "name": "gravstein24",
       "published": "2019-09",
       "title": "Selling gravestones online: from scratch to final products",
-      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
-      "technologies": ["react", "typescript", "storybook"],
+      "descriptions": "<p>Partnered with the marketing and creative teams at Ludens, our development team developed a web shop for Gravestein24. I participated in and contributed to the whole development process from the backend to the frontend, and from developing the product model and schemas with MongoDB, Node and Next to creating the product page on the frontend. I also developed the Redis implementation of client side caching for improving a website's performance as well as Sessionless Authentication using JWTs for a more secured authentication process.</p>",
+      "technologies": ["react", "typescript", "node", "next", "mongoDB"],
       "categories": ["work project", "e-commerce"],
       "website": "https://www.gravstein24.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331083/mysite/rkoeqlndzf6yxzgmpzr0.jpg",
@@ -105,8 +106,8 @@
       "id": "ff569900ceac43cdb6dd495a515b7f62",
       "name": "elkoenery",
       "published": "2019-11",
-      "title": "Developed the front-end for a norwegian electrical E-commerce platform",
-      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
+      "title": "Build an e-commerce platform for a norwegian electrical company from scratch",
+      "descriptions": "<p>On this project, I got to creating layouts, setting up schemas for Sanity studios, and developing several components. The designer team sends us the style guides and we implement it using Styled-Components and Storybook. I also got experience for how to deploy a website on Heroku. I had so much fun and learnt a lot practical experience during this process.</p>",
       "technologies": ["react", "typescript", "mogodb", "storybook"],
       "categories": ["e-commerce", "work project"],
       "website": "https://elkoenergy.no/",
@@ -118,8 +119,8 @@
       "name": "Alt Installasjon AS",
       "published": "2020-02",
       "title": "Online store for electrical installations and electrical equipment",
-      "descriptions": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p><p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>",
-      "technologies": ["react", "typescript", "mogodb", "storybook"],
+      "descriptions": "<p>Implemented well-designed web-based user interfaces using ReactJS/Redux, TypeScript, Styled-Components,Node.js and advance CSS animations. Gained hands-on experience with automated testing as well as continuous integration/deployment using CircleCI.</p>",
+      "technologies": ["react", "typescript"],
       "categories": ["e-commerce", "work project"],
       "website": "https://www.altinstallasjon.no/",
       "image": "https://res.cloudinary.com/dnkfgmzy1/image/upload/q_auto/v1586331065/mysite/xt8munzm56nasprajcxz.jpg",
